// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders 1`] = `
<button
  className="sc-bdvvtL sc-gsDKAQ dsCIzG djDaHe"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  className="sc-bdvvtL sc-gsDKAQ gPIhRN djDaHe"
>
  foo
</button>
`;
